pointed to test environment

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ logging:
 
 # gcp properties
 spring:
-  profiles.active: dev
+  profiles.active: test
   cloud:
     gcp:
       project-id: gcp-practice-project-307011
